fixed mail; added jump to

--- a/static/audio/css/main.css
+++ b/static/audio/css/main.css
@@ -31,7 +31,7 @@ label{
 }
 
 #main{
-max-width:1000px; margin: 0 auto;
+max-width:1100px; margin: 0 auto;
 padding-top: 25px;
 height:auto;
 overflow: auto;
